# blues-bird

./: Cargo.toml  README.md
migrations/: 20240720185526_create_birds.sql
src/: db.rs  main.rs  routing.rs
src/controllers/: birds.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: birds.rs  mod.rs
templates/: birds.html
