[package]
name = "blues-image"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
jsonwebtoken = "8.3.0"
image = "0.23"
once_cell = "1.18.0"
reqwest = "0.11.23"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["macros", "chrono"] }
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing-subscriber = "0.3.17"
askama = "0.12.1"
